--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Ralph working files (generated during runs)
-prd.json
-progress.txt
-.last-branch
+plans/prd.json
+plans/progress.txt
+plans/.last-branch
+plans/archive/
 
 # Archive is optional to commit
-# archive/
+# plans/archive/
 
 # OS files
 .DS_Store
